--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,12 @@ dependencies:
   flutter_secure_storage: ^3.3.3
   package_info: ^0.4.3+4
   flutter_native_splash: ^0.3.0
+  catcher: ^0.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.0
+  flutter_launcher_icons: ^0.7.0
 
 flutter_icons:
   android: "launcher_icon"
