--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   package_info: ^0.4.3+4
   flutter_native_splash: ^0.3.0
   catcher: ^0.4.2
+  graphql: ^3.0.0
 
 dev_dependencies:
   flutter_test:
